midpoint/release/1.10/install.adoc
---
release-version: '1.10'
---
= Installing MidPoint 1.10 "Phoebe" From Binary Distribution
:page-layout: release-install-legacy
:release-version: 1.10
:page-nav-title: Installation Instructions
:page-wiki-name: Installing midPoint from Binary Release - 1.10
:page-wiki-id: 3146069
:page-wiki-metadata-create-user: mamut
:page-wiki-metadata-create-date: 2011-10-21T14:12:09.305+02:00
:page-wiki-metadata-modify-user: lazyman
:page-wiki-metadata-modify-date: 2012-05-21T10:17:08.576+02:00
:page-liquid:

{% for v in site.data.midpoint-versions %}{% if v.version == page.release-version %}{% assign this = v %}{% endif %}{% endfor %}

== Pre-requisites

=== Java SE Development Kit 6

The development environment requires JDK 6. Recommended is JDK 6  update 11 or above.
Update 4 contains the JAX-WS 2.1 but there are some  issues, so we suggest something after update 11 or the latest  which you  can download at link:http://java.sun.com/javase/downloads/widget/jdk6.jsp[http://java.sun.com/javase/downloads/widget/jdk6.jsp]

`JAVA_HOME` environment variable should point to the JDK 6 installation path.

=== Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 6

Optional, AES-128 is used by default for encrypt/decrypt operations, so JCE is not needed.
If you want to use bigger key size, e.g. AES-256, then JCE is required for cryptographic operations.
You can download it at link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[http://www.oracle.com/technetwork/java/javase/downloads/index.html]. After downloading zip file follow installation instructions written in README.txt

=== Apache Tomcat

midPoint needs an application server.
Currently, Apache Tomcat 6.0.x is supported.
More application servers will be supported in later releases.

Apache Tomcat can be downloaded from link:http://tomcat.apache.org/download-60.cgi[http://tomcat.apache.org/download-60.cgi]. The Apache Tomcat installation directory is further referenced as <tomcat>.

== Prepare midPoint software

++++
{% include release-install-download-v1.html this=this %}
++++

=== Directory for Custom Components (midpoint.home)

If you intend to use custom connectors, you need to create a custom directory somewhere on your system.
This directory will be used to store your custom code and will not be overwritten when you redeploy midPoint application.

As an intended side-effect, this directory will also be used to store your embedded BaseX repository data.

If you don't want to use custom connectors or you want just to try midPoint, you can skip this chapter and continue to the Initialize Database section.


==== Custom Directory

You can create your custom directory anywhere in your system.
We often use locations such as "`/opt/midpoint-configuration`".

The directory has to be writable by the application server user.

The directory structure is described xref:/midpoint/reference/latest/deployment/midpoint-home-directory/[here].

==== Tomcat "catalina.sh" Customization

To actually use the Custom Directory, modify the "`catalina.sh`" script located in `<tomcat>/bin/catalina.sh` and set the "JAVA_OPTS" variable.

[source]
----

...
JAVA_OPTS="$JAVA_OPTS -Dmidpoint.home=/opt/midpoint-configuration"
...

----

=== Initialize Database

Repository initialization is not required, an embedded BaseX repository will be used by default.

=== Deploy midPoint

To deploy midPoint WAR file, use the following steps:

. Stop Tomcat if it's already running.

. Copy `idm.war` to `<tomcat>/webapps directory`.

. Start Tomcat.
It should pick up and deploy the "idm" application.

== Test midPoint administration GUI

Log in to the midPoint administration console using the following URL:

link:http://localhost:8080/idm/admin/[http://localhost:8080/idm/admin/]

[%autowidth,cols="h,1"]
|===
|  Username  |  administrator

|  Password
|  secret


|===

A home page of the midPoint console should be displayed.
This is a  pretty dynamic web application using AJAX for better user interaction.
The look&feel is quite minimalistic now, we are working on an  improvement just now.

If there is a problem, please check Tomcat logs in `<tomcat>/log/catalina.out` and `<tomcat>/log/idm.log`.

For a quick introduction to use of midPoint please follow the instructions on xref:/midpoint/quickstart/[First Steps] page.

== See Also

* xref:/midpoint/quickstart/[First Steps]

* xref:/midpoint/release/[midPoint Releases]
